[gd_scene load_steps=4 format=3 uid="uid://qo3ho2oktq54"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_lxdjf"]
[ext_resource type="Texture2D" uid="uid://c5gd0bvcgi7ub" path="res://assets/menu_fondo.jpg" id="2_xdn5v"]
[ext_resource type="AudioStream" uid="uid://kwq7qa0v5wup" path="res://musicAndSound/music/test-01.ogg" id="3_mxji2"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lxdjf")

[node name="2317_jpgWh860" type="Sprite2D" parent="."]
position = Vector2(393, 241)
texture = ExtResource("2_xdn5v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -35.0
offset_right = 100.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.09091, 1.09091)
metadata/_edit_group_ = true

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mxji2")

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
